# MinesweeperTest

Praktikum4Aufgabe13/Praktikum4Aufgabe13/: CMakeLists.txt  funktion.cpp  highscore.txt  kopf.h  main.cpp
Praktikum4Aufgabe13/build-Praktikum4Aufgabe13-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  highscore.txt
